--- a/imperialism.html
+++ b/imperialism.html
@@ -20,9 +20,9 @@
             <strong>Imperialism: Definition & Reason</strong>
         </div>
         <section id="aboutImperialism">
-            <div id="textContainer">
-                <br><br><br><h1>What Is Imperialism?</h1>
-                <br id="reason"><br><h1>Reasons for Imperialism</h1>
+            <div class="textContainer">
+                <br><h1>What Is Imperialism?</h1>
+                <br><br><h1>Reasons for Imperialism</h1>
             </div>
         </section>
         <div id="title2">
@@ -36,6 +36,9 @@
             <div class="slide" id="slide4"></div>
             <!--Each step is 1 year from 1900 to 1999-->
             <input type="range" min="0" max="99" value="0" step="1" id="slider">
+            <img id="img">
+            <div id="info">
+            </div>
         </section>
         <!--Navigation on the top of the page, placed after banner to show the border line at bottom for separation-->
         <div id="topNavigaion">
