--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
             <input type="range" min="0" max="100" value="0" step="1" id="slider">
             <img id="img">
             <div id="info">
-                <strong><span id="infoTitle"></span></strong>
+                <strong><span id="infoTitle"></span></strong><br>
+                <span id="infoText"></span>
             </div>
+            <button id="leftSlide"><i class="fa fa-chevron-left" id="buttonIcon1"></i></button>
+            <button id="rightSlide"><i class="fa fa-chevron-right" id="buttonIcon2"></i></button>
             <div id="answerBlock"></div>
             <div id="answerText"></div>
             <div id="trivia">
