add panama slide

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             <div class="slide" id="slide8"></div>
             <!--Each step is 1 year from 1900 to 1999-->
             <input type="range" min="0" max="100" value="0" step="1" id="slider">
-            <img id="img">
+            <div class="imgContainer" id="i">
+                <img id="img">
+            </div>
             <div id="info">
                 <strong><span id="infoTitle"></span></strong><br>
                 <span id="infoText"></span>
@@ -98,7 +100,8 @@
             <a href="https://www.youtube.com/watch?v=QfsfoFqsFk4&ab_channel=CrashCourse">Crash Course Youtube Video</a><span style="opacity: 0;">ss</span>
             <a href="https://en.wikipedia.org/wiki/McCarthyism#:~:text=McCarthyism%20is%20the%20practice%20of,related%20to%20communism%20and%20socialism">Wikipedia on McCarthyism</a><br>
             <span style="opacity: 0;">sss</span><a href="https://en.wikipedia.org/wiki/American_imperialism">Wikipedia on Imperialism</a><span style="opacity: 0;">ss</span>
-            <a href="https://courses.lumenlearning.com/boundless-ushistory/chapter/american-imperialism/">Lumen Boundless US History</a><br><br>
+            <a href="https://courses.lumenlearning.com/boundless-ushistory/chapter/american-imperialism/">Lumen Boundless US History</a><span style="opacity: 0;">ss</span>
+            <a href="https://history.state.gov/milestones/1899-1913/panama-canal">Office of the Historian</a><br><br>
             <a class="footerIcon" href="#"><i class="fa fa-home"></i></a>
             <a class="footerIcon" href="https://github.com/Cheng-I-Lin"><i class="fa fa-github"></i></a>
             <a class="footerIcon" href="https://www.astaichung.com/"><i class="fa fa-graduation-cap"></i></a>
