--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
             <div class="slide" id="slide6"></div>
             <div class="slide" id="slide7"></div>
             <div class="slide" id="slide8"></div>
+            <div class="slide" id="slide9"></div>
+            <div class="slide" id="slide10"></div>
             <!--Each step is 1 year from 1900 to 1999-->
-            <input type="range" min="0" max="100" value="0" step="1" id="slider">
+            <input type="range" min="0" max="102" value="0" step="1" id="slider">
             <div class="imgContainer" id="i">
                 <img id="img">
             </div>
@@ -71,7 +73,7 @@
             <div id="answerText"></div>
             <div id="trivia">
                 <div class="choice" id="choice1" onclick="checkAns(this.id);">
-                    <div id="choice1Text">s</div>
+                    <div id="choice1Text"></div>
                 </div>
                 <div class="choice" id="choice2" onclick="checkAns(this.id);">
                     <div id="choice2Text"></div>
