--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div id="tooltip"></div>
         <!--Navigation on the top of the page, placed after banner to show the border line at bottom for separation-->
         <div id="topNavigaion">
-            <a class="navigationLinks" href="#">U.S. Imperialism</a>
+            <a class="navigationLinks" href="#">US Imperialism</a>
             <!--Use href=# and id name to link to specific objects-->
             <a class="navigationLinks" href="#title1">Imperialism: Definition & Reason</a>
             <a class="navigationLinks" href="#title2">Historical Timeline</a>
